# nexusterm

./: .gitignore  Makefile  index.html  package-lock.json  package.json  vite.config.js
scripts/: run.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/css/: base.css  layout.css  panel.css  shortcuts.css  sidebar.css  statusbar.css  style.css  titlebar.css
src/js/: browser.js  main.js  notifications.js  panel.js  persist.js  platform.js  sessions.js  shortcuts.js  state.js  statusbar.js  terminal.js  window.js
