[package]
name = "nexusterm"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexusterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
portable-pty = "0.8"
